--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="wrapper">
             <header>
                 <div class="logo">
-                    <i class="fa-solid fa-a"></i>
-                    <div class="logo-text">Alex Smith</div>
+                    <i class="fa-solid fa-j"></i>
+                    <div class="logo-text">Joshua Marandi</div>
                 </div>
                 <nav>
                     <div class="togglebtn">
@@ -34,14 +34,13 @@
             </header>
             <div class="container">
                  <div class="hero-pic">
-                    <img src="images/main_photo.jpg" alt="profile pic">
+                    <img src="images/Wazawa_Hub.jpeg" alt="profile pic">
                  </div>
                  <div class="hero-text">
-                    <h5>Hi I'm <span class="input">Frontend Developer</span></h5>
-                    <h1>Alex Smith</h1>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta delectus dolorum 
-                        quibusdam maiores magni quod rem in porro, laborum, laudantium ex repellendus explicabo, 
-                        autem molestiae!
+                    <h5>Hi I'm <span class="input">Web Developer (Laravel) </span></h5>
+                    <h1>Joshua Marandi</h1>
+                    <p> An experienced web developer, SEO engineer, logo and post Designer.Having me as a freelancer is having the treasure you needed
+                        
                     </p>
 
                     <div class="btn-group">
@@ -74,7 +73,7 @@
         })
 
         var typed=new Typed(".input",{
-            strings:["Frontend Developer","UX Designer","Web Developer"],
+            strings:["Web development (Laravel)","UX Designer","Web Developer"],
             typedSpeed:70,
             backSpeed:55,
             loop:true
