--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Portfolio Website Design</title>
+    <title>Joshua Marandi -Portifolio</title>
     <link rel="stylesheet" href="style.css">
     <!----Font awesome cdn font icon css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -63,7 +63,7 @@
 
     <!-- Projects Section -->
     <section id="projects" class="projects-section">
-        <h2>My Projects</h2>
+        <h1 style="margin-left: 40%; margin-bottom: 5%; color: aliceblue;">My Projects</h1>
         <div class="projects-container">
             <div class="project-card">
                 <img src="images/Wazawa_Hub.jpeg" alt="Project 1">
