--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
             </form>
 
             <div class="contact-info">
-                <p><i class="fa-solid fa-phone"></i> +123 456 7890</p>
-                <p><i class="fa-solid fa-envelope"></i> joshua@example.com</p>
-                <p><i class="fa-solid fa-map-marker-alt"></i> Nairobi, Kenya</p>
+                <p><i class="fa-solid fa-phone"></i> +255748415599</p>
+                <p><i class="fa-solid fa-envelope"></i> marandijoshua07@gmail.com</p>
+                <p><i class="fa-solid fa-map-marker-alt"></i> Mbeya, Tanzania</p>
             </div>
         </div>
     </section>
@@ -127,5 +127,6 @@
         });
     </script>
 </body>
+
 
 </html>
