add true cture and products

--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
                         <span></span>
                     </div>
                     <ul class="navlinks">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#projects">Portfolio</a></li>
-                        <li><a href="#">Resume</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#">Home</a></li> <!-- Ensure this links to the home section -->
+                        <li><a href="#projects">Portfolio</a></li> <!-- Links to the projects section -->
+                        <li><a href="#">Resume</a></li> <!-- Ensure this links to the resume section if applicable -->
+                        <li><a href="#">Blog</a></li> <!-- Ensure this links to the blog section if applicable -->
+                        <li><a href="#contact">Contact</a></li> <!-- Links to the contact section -->
                     </ul>
                 </nav>
             </header>
 
             <div class="container">
                 <div class="hero-pic">
-                    <img src="images/Wazawa_Hub.jpeg" alt="profile pic">
+                    <img src="images/mine.jpeg" alt="profile pic">
                 </div>
                 <div class="hero-text">
                     <h5>Hi I'm <span class="input">Web Developer (Laravel)</span></h5>
@@ -45,7 +45,7 @@
                     <p>An experienced web developer, SEO engineer, logo and post Designer. Having me as a freelancer is having the treasure you needed.</p>
 
                     <div class="btn-group">
-                        <a href="#" class="btn active">Download CV</a>
+                        <a href="cv.pdf" class="btn active" download>Download Resume</a>
                         <a href="#" class="btn">Contact</a>
                     </div>
 
@@ -66,19 +66,19 @@
         <h1 style="margin-left: 40%; margin-bottom: 5%; color: aliceblue;">My Projects</h1>
         <div class="projects-container">
             <div class="project-card">
-                <img src="images/Wazawa_Hub.jpeg" alt="Project 1">
-                <h3>Project One</h3>
-                <p>A description of Project One. This project was built using Laravel and Vue.js.</p>
+                <img src="images/e-commerce.jpg" alt="Wazawa Hub">
+                <h3>E-commerce</h3>
+                <p>A description of Wazawa Hub. This project is an e-commerce website.</p>
             </div>
             <div class="project-card">
-                <img src="images/Wazawa_Hub.jpeg" alt="Project 2">
-                <h3>Project Two</h3>
-                <p>A description of Project Two. This project focuses on responsive design and user experience.</p>
+                <img src="images/Wazawa_Hub.jpeg" alt="University Project Management">
+                <h3>University Project Management</h3>
+                <p>A description of University Project Management. This project is a university project management system.</p>
             </div>
             <div class="project-card">
-                <img src="images/Wazawa_Hub.jpeg" alt="Project 3">
-                <h3>Project Three</h3>
-                <p>A description of Project Three. It is an e-commerce website built using Laravel.</p>
+                <img src="images/multishop.PNG" alt="Multi-Shop Management">
+                <h3>Multi-Shop Management</h3>
+                <p>A description of Multi-Shop Management. This project is a multi-shop management platform.</p>
             </div>
         </div>
     </section>
@@ -127,6 +127,4 @@
         });
     </script>
 </body>
-
-
 </html>
